// TODO bottomsheet for spotters
// TODO make location update interval configurable
// TODO add vtec end date check to tor notif

[ADD] - adding something new - method, file, etc. to the repo
[REM] - remove items
[IMP] - improvement
[DEB] - Added temporary debug code
[FIX] - bug fixes
[REF] - refactor a method, group, variable, etc.
[MER] - merge

55178 2019_05_13    [BUG] nexrad radar long press, if select a different type of polygon don't show anything
55177 2019_05_13    [IMP] Convert Spotters activity to use bottomsheet and one FAB instead of 4 FAB
55176 2019_05_13    [IMP] nexrad dual pane - support portrait better
                    [IMP] nexrad radar location update interval, set from 20sec to 10sec and move to MyApp for future config
55175 2019_05_12    [IMP] severe dashboard -  check end time of vtec and compare to current time to overcome NWS warning garbage with new API
55174 2019_05_12    [REF] refactor goes16 util from flutter
55173 2019_05_12    [BUG] vtec time decode had some bugs
55172 2019_05_12    [IMP] in polygon warning decode end time of vtec and compare to current time to overcome NWS warning garbage with new API
55171 2019_05_12    [BUG] launching SPC Meso from homescreen SPC Meso images was not working correctly in most cases
                    [BUG] Homescreen SPC Meso Fav #1 500mb was not working if falling back to default
                    [BUG] kotlin.UninitializedPropertyAccessException at joshuatee.wx.activitiesmisc.SpottersActivity$onCreateOptionsMenu$1.onQueryTextChange (SpottersActivity.kt:73)
55170 2019_05_12    [BUG] GOES16/17 - CONUS was using native size, use 1250x750
                    [BUG] check if LocationManager.GPS_PROVIDER is avail in nexrad
                    [BUG]  at joshuatee.wx.external.ExternalSunriseLocation.<init> (ExternalSunriseLocation.kt:50)
                        java.lang.NumberFormatException: (use kotlin toBigDecimalOrNull)